--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
+numpy==1.23.5
+pandas==1.5.3
 dash==2.12.0
 dash-bootstrap-components==1.4.1
 plotly==5.15.0
-pandas==1.5.3
-babel==2.12.1
+Babel==2.12.1
