--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ dash==2.12.0
 dash-bootstrap-components==1.4.1
 plotly==5.15.0
 Babel==2.12.1
-pyrebase4==4.4.3
-firebase-admin==6.0.0
+pyrebase4
+requests>=2.28.0
+urllib3>=1.26.0
